# elenchus

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  codecov.yml  tarpaulin.toml
crates/elenchus-cli/: Cargo.toml  README.md
crates/elenchus-cli/src/: main.rs
crates/elenchus-cli/tests/: cli.rs  examples.rs
crates/elenchus-cli/wix/: main.wxs
crates/elenchus-compiler/: AGENTS.md  Cargo.toml  README.md
crates/elenchus-compiler/src/: closure.rs  compiler.rs  data.rs  domain.rs  error.rs  ir.rs  lib.rs  ports.rs  resolver.rs  sig.rs  subst.rs  tests.rs
crates/elenchus-compiler/tests/: errors.rs  file_imports.rs  ir.rs  pipeline.rs  ports.rs
crates/elenchus-compiler/tests/fixtures/: car.vrf
crates/elenchus-compiler/tests/fixtures/broken/: bad.vrf  main.vrf
crates/elenchus-compiler/tests/fixtures/core/: base.vrf
crates/elenchus-compiler/tests/fixtures/cycle/: x.vrf  y.vrf
crates/elenchus-compiler/tests/fixtures/std/: engine.vrf  (+1 more)
crates/elenchus-compiler/tests/snapshots/: errors__axiom_redefinition.snap  errors__circular_import.snap  errors__missing_import.snap  errors__parse_error_is_wrapped_with_source.snap  file_imports__merged_graph_ir_snapshot.snap  ir__complex_program_ir.snap  ir__imported_ir_keeps_provenance_and_unifies_atoms.snap
crates/elenchus-mcp/: AGENTS.md  Cargo.toml  README.md
crates/elenchus-mcp/src/: main.rs  messages.rs  rpc.rs  tools.rs
crates/elenchus-mcp/tests/: mcp.rs
crates/elenchus-mcp/wix/: main.wxs
crates/elenchus-parser/: Cargo.toml  LICENSE  README.md
crates/elenchus-parser/src/: ast.rs  diag.rs  grammar.rs  keywords.rs  lib.rs  reserved.rs  syntax.rs
crates/elenchus-parser/tests/: errors.rs  roundtrip.rs
crates/elenchus-parser/tests/fixtures/: showcase.vrf
crates/elenchus-parser/tests/snapshots/: errors__and_literal_missing.snap  errors__assume_missing_predicate.snap  errors__axiom_implication_missing_then.snap  errors__axiom_missing_colon.snap  errors__close_with_an_unknown_kind.snap  errors__exists_missing_condition_line.snap  errors__exists_missing_in.snap  errors__exists_witness_missing_term.snap  errors__fact_because_missing_ground.snap  errors__fact_missing_predicate.snap  errors__garbage_top_level_line.snap  errors__import_unterminated_string.snap  errors__limit_shows_first_n_with_footer.snap  errors__list_axiom_needs_two_atoms.snap  errors__list_premise_needs_two_atoms.snap  errors__max_classes_caps_the_number_of_classes.snap  errors__max_per_class_caps_places_within_a_class.snap  errors__not_missing_predicate.snap  errors__premise_implication_missing_then.snap  errors__premise_missing_colon.snap  errors__provide_missing_colon.snap  errors__provide_without_a_value.snap  errors__reports_every_error_in_one_pass.snap  errors__reserved_word_as_subject.snap  errors__rule_body_not_an_implication.snap  errors__rule_missing_colon.snap  errors__showcase_every_failure_mode.snap  errors__then_without_literal.snap  errors__trailing_garbage_after_valid_program.snap  errors__trailing_text_after_fact_atom.snap  errors__unless_without_literal.snap  errors__unterminated_import_string.snap  errors__var_default_with_a_non_boolean.snap  errors__var_default_without_a_value.snap  errors__var_missing_name.snap  errors__var_trailing_text.snap
crates/elenchus-solver/: AGENTS.md  Cargo.toml  README.md
crates/elenchus-solver/src/: analysis.rs  cnf.rs  eval.rs  lib.rs  sat.rs  tests.rs  unsat.rs  v3.rs
crates/elenchus-solver/src/report/: human.rs  json.rs  mod.rs
crates/elenchus-solver/src/sat/: mod.rs  models.rs  solver.rs  tests.rs
crates/elenchus-solver/tests/: json_variants.rs  output_variants.rs  parse_errors.rs  ports.rs  prop.proptest-regressions  prop.rs  puzzles.rs  report.rs  sat.rs  solve.rs
crates/elenchus-solver/tests/snapshots/: json_variants__conflict_assume_vs_fact_retract.snap  json_variants__conflict_assumptions_retract.snap  json_variants__conflict_derived_contradiction.snap  json_variants__conflict_exclusive_violation.snap  json_variants__conflict_exists_witness.snap  json_variants__conflict_fact_because_false.snap  json_variants__conflict_fact_contradiction.snap  json_variants__conflict_implication_violation.snap  json_variants__conflict_multiple_sorted.snap  json_variants__conflict_system_unsatisfiable.snap  json_variants__consistent_defeated_default.snap  json_variants__consistent_minimal.snap  json_variants__consistent_with_derived.snap  json_variants__hints_similar_atoms.snap  json_variants__orphans_lint.snap  json_variants__placeholders_var_default.snap  json_variants__underdetermined_with_witness_hint.snap  json_variants__unsat_core_joint.snap  json_variants__unused_import.snap  json_variants__warning_exists_unwitnessed.snap  json_variants__warning_fact_because_unknown.snap  json_variants__warning_multiple_with_derived.snap  json_variants__warning_single.snap  output_variants__conflict_assume_vs_fact_retract.snap  output_variants__conflict_assumptions_retract.snap  output_variants__conflict_derived_contradiction.snap  output_variants__conflict_exclusive_violation.snap  output_variants__conflict_exists_witness.snap  output_variants__conflict_fact_because_false.snap  output_variants__conflict_fact_contradiction.snap  output_variants__conflict_implication_violation.snap  output_variants__conflict_multiple_sorted.snap  output_variants__conflict_system_unsatisfiable.snap  output_variants__consistent_minimal.snap  output_variants__consistent_with_defeated_default.snap  output_variants__consistent_with_derived.snap  output_variants__underdetermined_with_witness_hint.snap  output_variants__warning_exists_unwitnessed.snap  output_variants__warning_fact_because_unknown.snap  output_variants__warning_multiple_with_derived.snap  (+6 more)
crates/elenchus-wasm/: Cargo.toml  README.md  package.json
crates/elenchus-wasm/npm/: index.d.ts  index.js
crates/elenchus-wasm/scripts/: build-npm.mjs
crates/elenchus-wasm/src/: lib.rs
crates/elenchus-wasm/test/: smoke.test.mjs
crates/elenchus-wasm/test/fixtures/: consistent.vrf  entry-conflict.vrf  entry-missing.vrf  entry-ok.vrf  lib.vrf  provide.vrf  template.vrf
(+21 files in other folders)
