[workspace]
resolver = "2"
members = [
    "crates/elenchus-parser",
    "crates/elenchus-compiler",
    "crates/elenchus-solver",
    "crates/elenchus-cli",
    "crates/elenchus-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mansur Azatbek <mansur62624@gmail.com>"]
license = "MIT"

[workspace.dependencies]

# Local Crates (version pinned so the crates can be published to crates.io)
elenchus-parser = { path = "crates/elenchus-parser", version = "0.1.0" }
elenchus-compiler = { path = "crates/elenchus-compiler", version = "0.1.0", default-features = false }
elenchus-solver = { path = "crates/elenchus-solver", version = "0.1.0", default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Shared Dependencies (versions pinned 1:1 with the vsm workspace)
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
nom_locate = { version = "5.0.0", default-features = false, features = [
    "alloc",
] }
thiserror = { version = "2.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }

# Snapshot testing for parser error output
insta = "1.41"

# Property-based testing
proptest = "1"

# JSON (dev: validate Report::to_json output; runtime dep of the MCP server)
serde_json = "1"
