[workspace]
resolver = "2"
members = [
    "crates/elenchus-parser",
    "crates/elenchus-compiler",
    "crates/elenchus-solver",
    "crates/elenchus-cli",
    "crates/elenchus-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mansur Azatbek <mansur62624@gmail.com>"]
license = "MIT"
repository = "https://github.com/m62624/elenchus"
homepage = "https://github.com/m62624/elenchus"

[workspace.dependencies]

# Local Crates (version pinned so the crates can be published to crates.io)
elenchus-parser = { path = "crates/elenchus-parser", version = "0.1.0" }
elenchus-compiler = { path = "crates/elenchus-compiler", version = "0.1.0", default-features = false }
elenchus-solver = { path = "crates/elenchus-solver", version = "0.1.0", default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Shared Dependencies (versions pinned 1:1 with the vsm workspace)
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
nom_locate = { version = "5.0.0", default-features = false, features = [
    "alloc",
] }
thiserror = { version = "2.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }

# Snapshot testing for parser error output
insta = "1.41"

# Property-based testing
proptest = "1"

# JSON (dev: validate Report::to_json output; runtime dep of the MCP server)
serde_json = "1"

# cargo-dist: tagged binary releases for the `elenchus` CLI and `elenchus-mcp`
# server (the only two shipped binaries; the libraries set `dist = false`).
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
# Shipped as prebuilt-binary installers: a POSIX `sh` script (Linux/macOS), a
# PowerShell script (Windows), and a Windows `.msi` (registers in "Add or remove
# programs", so it uninstalls/upgrades cleanly; needs the per-package WiX
# `upgrade-guid` below). No Homebrew tap. `cargo binstall` layers on top for free
# — it reads the release's cargo-dist `dist-manifest.json`, so no extra config is
# needed (see the README install section).
installers = ["shell", "powershell", "msi"]
# The release workflow is customized (workflow_call, driven by the pin/v*
# orchestrator), so don't fail `dist plan` for the CI file being "out of date".
allow-dirty = ["ci"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
pr-run-mode = "plan"

[profile.dist]
inherits = "release"
lto = "thin"
