[package]
name = "elenchus-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Compiles parsed elenchus DSL into a canonical Impossible/CNF clause IR: import resolution, desugaring, atom interning, content-addressed dedup."

[dependencies]
elenchus-parser = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }

[features]
default = ["std"]
std = []
hashing = ["dep:sha2"]
