[package]
name = "elenchus-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Compiles parsed elenchus DSL into a canonical Impossible/CNF clause IR: import resolution, desugaring, atom interning, content-addressed dedup."
readme = "README.md"
keywords = ["logic", "inference", "sat", "verification", "no-std"]
categories = ["compilers", "no-std", "mathematics"]

# A library, not a shipped binary — excluded from cargo-dist releases.
[package.metadata.dist]
dist = false

[dependencies]
elenchus-parser = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
default = ["std"]
# std unlocks the filesystem-backed import resolver (FileResolver).
std = []
