[package]
name = "elenchus-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "English-like DSL parser for the elenchus consistency checker (facts, premises, rules, checks)."
readme = "README.md"
keywords = ["dsl", "parser", "logic", "inference", "no-std"]
categories = ["parser-implementations", "no-std"]

# A library, not a shipped binary — excluded from cargo-dist releases.
[package.metadata.dist]
dist = false

[dependencies]
nom = { workspace = true }
nom_locate = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
