[package]
name = "elenchus-solver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Forward-pass inference interpreter for elenchus: 3-valued Kleene evaluation of the Impossible/CNF clause IR into CONFLICT / WARNING / CONSISTENT results."
readme = "README.md"
keywords = ["logic", "inference", "verification", "kleene", "no-std"]
categories = ["mathematics", "no-std", "development-tools"]

# A library, not a shipped binary — excluded from cargo-dist releases.
[package.metadata.dist]
dist = false

[dependencies]
elenchus-compiler = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["std"]
# Propagates std to the compiler (enables FileResolver-based verification).
std = ["elenchus-compiler/std"]
